test/message/promise_fast_handled_reject.out
(node:*) UnhandledPromiseRejectionWarning: Unhandled promise rejection (rejection id: 1): One
(node:*) UnhandledPromiseRejectionWarning: Unhandled promise rejection (rejection id: 2): Two
(node:*) UnhandledPromiseRejectionWarning: Unhandled promise rejection (rejection id: 3): Three
exit event emitted
*test*message*promise_fast_handled_reject.js:*
  throw new Error('Two');
  ^

Error: Two
    at *test*message*promise_fast_handled_reject.js:*:*
    at Promise (<anonymous>)
    at Object.<anonymous> (*test*message*promise_fast_handled_reject.js:*:*)
    at Module._compile (module.js:*:*)
    at Object.Module._extensions..js (module.js:*:*)
    at Module.load (module.js:*:*)
    at tryModuleLoad (module.js:*:*)
    at Function.Module._load (module.js:*:*)
    at Function.Module.runMain (module.js:*:*)
    at startup (bootstrap_node.js:*:*)
